--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^8.7.1",
     "jest": "^27.0.5",
     "prettier": "^2.3.2",
     "pug": "^3.0.2",
